# multitrack-visualizer

./: .gitignore  Cargo.toml  README.md  lyrics-example.lrc  midi-example.json  midi-schema.json  song-schema.json  song.json  window.json
song/: song.json  window.json
src/: main.rs
src/data/: channel.rs  cli.rs  defaults.rs  image.rs  lyrics.rs  midi.rs  mod.rs  song.rs  track.rs  video.rs  window.rs
src/display/: draw.rs  font.rs  mod.rs  window.rs
