[package]
name = "multitrack-visualizer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
lazy_static = "1.4.0"
symphonia = { version = "0.5.3", features = [ "all-codecs" ] }
image = { version = "0.24.6", default-features = false, features = [ "png" ] }
video-rs = { version = "0.4", features = ["ndarray"] }
ffmpeg-next = "6.0.0"
ndarray = "0.15.6"
fast_image_resize = "2.7.3"
clap = { version = "4.3.5", features = [ "derive" ] }
indicatif = "0.17.5"
