[package]
name = "multitrack-visualizer"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
lazy_static = "1.4.0"
symphonia = { version = "0.5.3", features = [ "all-codecs" ] }
image = { version = "0.24.8", default-features = false, features = [ "png" ] }
video-rs = { version = "0.6", features = ["ndarray"] }
ffmpeg-next = "6.1.1"
ndarray = "0.15.6"
fast_image_resize = "3.0.4"
clap = { version = "4.5.1", features = [ "derive" ] }
indicatif = "0.17.5"
midly = "0.5"
