[package]
name = "multitrack-visualizer"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
lazy_static = "1.5.0"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
video-rs = { version = "0.8.1", features = ["ndarray"] }
ffmpeg-next = "7.0.2"
ndarray = "0.15.6"
fast_image_resize = { version = "4.0.0", features = ["image"] }
clap = { version = "4.5.11", features = ["derive"] }
indicatif = "0.17.8"
midly = "0.5"
regex = "1.10.5"